perbaikan file html login dan register

--- a/templates/index.html
+++ b/templates/index.html
@@ -330,6 +330,28 @@
     </section>End Pricing Section -->
 
 
+     <!-- ======= Hasil Gambar ======= -->
+  <section id="about" class="d-flex align-items-center">
+    <div class="container">
+     
+      <div class="row">
+        <div class="col-lg-6 d-flex flex-column justify-content-center pt-4 pt-lg-0 order-2 order-lg-1">
+
+         
+          <div class="d-flex justify-content-center justify-content-lg-start">
+       
+     
+          </div>
+        </div>
+        <div class="col-lg-6 order-1 order-lg-2 hero-img">
+        
+        </div>
+      </div>
+    </div>
+
+  </section><!-- Hasil Gambar -->
+
+
 
     <!-- ======= Contact Section ======= -->
     <section id="contact" class="contact">
