--- a/static/css/iofrm-style.css
+++ b/static/css/iofrm-style.css
@@ -32,8 +32,9 @@ html, body {
 }
 
 .form-body {
-    background-color: #0093FF;
+    background-image: url("../images/background_log.jpg");
     height: 100%;
+    font-weight: 100px;
 }
 
 .form-body > .row {
@@ -61,12 +62,12 @@ html, body {
     display: inline-block;
 }
 
-.website-logo .logo {
+/* .website-logo .logo {
     display: inline-block;
-    background-image: url("../images/logo-light.svg");
+    background-image: url("../images/background_log.jpg");
     background-size: contain;
     background-repeat: no-repeat;
-}
+} */
 
 .website-logo .logo img {
     width: 100px;
@@ -148,6 +149,7 @@ html, body {
     transform: scale(1.05);
     -webkit-box-shadow: 0 11px 19px rgba(160, 163, 165, 0.3);
     box-shadow: 0 11px 19px rgba(160, 163, 165, 0.3);
+    
 }
 
 .img-holder {
@@ -245,7 +247,7 @@ html, body {
     top: 0;
     width: 100%;
     height: 100%;
-    background-image: url("../images/img1.jpg");
+    background-image: url("../images/background_log.jpg");
     background-size: cover;
     background-position: center;
     z-index: -1;
