--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1590,3 +1590,28 @@ section {
     padding-top: 4px;
   }
 }
+
+
+#about {
+  width: 100%;
+  height: 80vh;
+  background: #37517e;
+}
+
+#about .container {
+  padding-top: 72px;
+}
+
+#about h1 {
+  margin: 0 0 10px 0;
+  font-size: 48px;
+  font-weight: 700;
+  line-height: 56px;
+  color: #fff;
+}
+
+#about h2 {
+  color: rgba(255, 255, 255, 0.6);
+  margin-bottom: 50px;
+  font-size: 24px;
+}
