--- a/templates/index.html
+++ b/templates/index.html
@@ -358,13 +358,11 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h2>Contact</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint
-            consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit
-            in iste officiis commodi quidem hic quas.</p>
+          <h2>Kontak</h2>
+          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eum quos non ipsa placeat vero? Quisquam aspernatur tempora obcaecati hic aliquid voluptas modi consequatur reprehenderit unde, natus esse blanditiis facere numquam..</p>
         </div>
 
-        <div class="row">
+        <!-- <div class="row">
 
           <div class="col-lg-5 d-flex align-items-stretch">
             <div class="info">
@@ -424,15 +422,15 @@
 
         </div>
 
-      </div>
-    </section><!-- End Contact Section -->
+      </div> -->
+    </section> <!-- End Contact Section -->
 
   </main><!-- End #main -->
 
   <!-- ======= Footer ======= -->
   <footer id="footer">
 
-    <div class="footer-newsletter">
+    <!-- <div class="footer-newsletter">
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-lg-6">
@@ -444,13 +442,13 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
 
     <div class="footer-top">
       <div class="container">
         <div class="row">
 
-          <div class="col-lg-3 col-md-6 footer-contact">
+          <!-- <div class="col-lg-3 col-md-6 footer-contact">
             <h3>Arsha</h3>
             <p>
               A108 Adam Street <br>
@@ -464,9 +462,9 @@
           <div class="col-lg-3 col-md-6 footer-links">
             <h4>Useful Links</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Home</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Home</a></li> -->
               <!-- <li><i class="bx bx-chevron-right"></i> <a href="#">About us</a></li> -->
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Services</a></li>
+              <!-- <li><i class="bx bx-chevron-right"></i> <a href="#">Services</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Terms of service</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Privacy policy</a></li>
             </ul>
@@ -497,19 +495,19 @@
 
         </div>
       </div>
-    </div>
+    </div> -->
 
-    <div class="container footer-bottom clearfix">
+    <!-- <div class="container footer-bottom clearfix">
       <div class="copyright">
         &copy; Copyright <strong><span>Arsha</span></strong>. All Rights Reserved
       </div>
-      <div class="credits">
+      <div class="credits"> -->
         <!-- All the links in the footer should remain intact. -->
         <!-- You can delete the links only if you purchased the pro version. -->
         <!-- Licensing information: https://bootstrapmade.com/license/ -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/arsha-free-bootstrap-html-template-corporate/ -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
-      </div>
+        <!-- Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+      </div> -->
     </div>
   </footer><!-- End Footer -->
 
