--- a/templates/index.html
+++ b/templates/index.html
@@ -133,6 +133,13 @@
             tersebut asli atau repost</p>
         </div>
 
+        <div class="d-flex align-items-center justify-content-center vh-60 flex-column gap-7">
+          <form method="post" action="/scraping"class="d-flex">
+            <input class="form-control me-10" type="search" placeholder="Search Nama Produk" aria-label="Search">
+            <button class="btn btn-primary" name="images" type="submit">Search</button>
+          </form>
+        </div>
+      
         <div class="row">
           <div class="col-xl-3 col-md-6  align-items-stretch">
             <div class="icon-box">
@@ -141,6 +148,8 @@
               <p>hasilnya untuk mengetahui</p>
               <p>apakah foto produk</p>
               <p>repost atau bukan</p>
+
+              <button class="btn btn-primary" name="images" type="submit">Dowload</button>
             </div>
           </div>
           <div class="col-xl-2 col-md-6  align-items-stretch">
@@ -331,23 +340,47 @@
 
 
      <!-- ======= Hasil Gambar ======= -->
-  <section id="about" class="d-flex align-items-center">
-    <div class="container">
-     
-      <div class="row">
-        <div class="col-lg-6 d-flex flex-column justify-content-center pt-4 pt-lg-0 order-2 order-lg-1">
 
-         
-          <div class="d-flex justify-content-center justify-content-lg-start">
-       
-     
+    
+    <div class="section-title">
+      <h2>ABOUT</h2>
+    </div>
+    <section id="about" class="d-flex align-items-center">
+    <div class="container">
+        <div class="row">
+          <div id="_bg__frame_1"  >
+            <button class="download">Deteksi Repost</button>
+              <button class="download">Dowload</button>
+              <img src="{{url_for('static', filename='Dataset/Data1.png')}}" id="mask_group" />
+              <img src="{{url_for('static', filename='Dataset/Data1.png')}}" id="mask_group" />
+              <img src="{{url_for('static', filename='Dataset/Data1.png')}}" id="mask_group" />
+              <img src="{{url_for('static', filename='Dataset/Data1.png')}}" id="mask_group" />
+              <img src="{{url_for('static', filename='Dataset/Data1.png')}}" id="mask_group" />
+              <img src="{{url_for('static', filename='Dataset/Data1.png')}}" id="mask_group" />
+              <img src="{{url_for('static', filename='Dataset/Data1.png')}}" id="mask_group" />
+              <img src="{{url_for('static', filename='Dataset/Data1.png')}}" id="mask_group" />
+              <img src="{{url_for('static', filename='Dataset/Data1.png')}}" id="mask_group" />
+              <img src="{{url_for('static', filename='Dataset/Data1.png')}}" id="mask_group" />
+              <img src="{{url_for('static', filename='Dataset/Data1.png')}}" id="mask_group" />
+              <img src="{{url_for('static', filename='Dataset/Data1.png')}}" id="mask_group" />
+              <img src="{{url_for('static', filename='Dataset/Data1.png')}}" id="mask_group" />
+              <img src="{{url_for('static', filename='Dataset/Data1.png')}}" id="mask_group" />
+              
+          <!--<div class="hasil_repost">
+              <h4>95%</h4>
+              <h4>80%</h4>
+              <h4>98%</h4>
+              <h4>98%</h4>
+              <h4>70%</h4>
+              <h4>68%</h4>
+
+        </div> -->
           </div>
         </div>
-        <div class="col-lg-6 order-1 order-lg-2 hero-img">
+
         
-        </div>
-      </div>
-    </div>
+              </div>
+            
 
   </section><!-- Hasil Gambar -->
 
