--- a/templates/index.html
+++ b/templates/index.html
@@ -48,11 +48,11 @@
       <nav id="navbar" class="navbar">
         <ul>
           <li><a class="nav-link scrollto active" href="#hero">Beranda</a></li>
-          <li><a class="nav-link scrollto" href="#about">Tentang</a></li>
+          <!-- <li><a class="nav-link scrollto" href="#about">Tentang</a></li> -->
           <li><a class="nav-link scrollto" href="#services">Layanan Kami</a></li>
           <!-- <li><a class="nav-link scrollto" href="#team">Team</a></li> -->
-          <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
-          <li><a class="getstarted scrollto" href="#about">Get Started</a></li>
+          <li><a class="nav-link scrollto" href="#contact">Narahubung</a></li>
+          <li><a class="getstarted scrollto" href="#services">Jelajahi Fitur</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -133,13 +133,8 @@
             tersebut asli atau repost</p>
         </div>
 
-        <div class="d-flex align-items-center justify-content-center vh-60 flex-column gap-7">
-          <form method="post" action="/scraping"class="d-flex">
-            <input class="form-control me-10" type="search" placeholder="Search Nama Produk" aria-label="Search">
-            <button class="btn btn-primary" name="images" type="submit">Search</button>
-          </form>
-        </div>
-      
+
+
         <div class="row">
           <div class="col-xl-3 col-md-6  align-items-stretch">
             <div class="icon-box">
@@ -149,21 +144,20 @@
               <p>apakah foto produk</p>
               <p>repost atau bukan</p>
 
-              <button class="btn btn-primary" name="images" type="submit">Dowload</button>
+              <!-- <button class="btn btn-primary" name="images" type="submit">Dowload</button> -->
             </div>
           </div>
           <div class="col-xl-2 col-md-6  align-items-stretch">
-            <svg xmlns="http://www.w3.org/2000/svg" width="88.209" style="margin-top: 10rem;" class="ms-4" height="98.922" viewBox="0 0 88.209 98.922"
-              class="sprite sprite-arrow">
+            <svg xmlns="http://www.w3.org/2000/svg" width="88.209" style="margin-top: 10rem;" class="ms-4"
+              height="98.922" viewBox="0 0 88.209 98.922" class="sprite sprite-arrow">
               <path
                 d="M79.79,93.774l-2.981,1.17-1.641.6-3.195,1.112c-4.176,1.41-8,2.525-11.282,3.3-6.561,1.548-10.941,1.733-11.585.189s2.569-4.527,8.285-8.1c2.425-1.516,5.322-3.141,8.544-4.8A57.408,57.408,0,0,1,48.179,81.8,60.135,60.135,0,0,1,38.5,75.7,58.62,58.62,0,0,1,29.7,67.015,61.125,61.125,0,0,1,18.809,46.249a68.736,68.736,0,0,1-3.02-18.388A53.086,53.086,0,0,1,15.95,20.8c.086-1.034.147-1.993.287-2.873s.3-1.682.466-2.4c.65-2.878,1.407-4.432,2.244-4.431s1.676,1.547,2.473,4.275c.2.682.4,1.438.589,2.264l.7,2.662c.488,1.9.9,4.068,1.571,6.4a110.967,110.967,0,0,0,5.058,15.825,66.468,66.468,0,0,0,9.768,16.843,60.866,60.866,0,0,0,6.913,7.144,67.012,67.012,0,0,0,7.545,5.506,78,78,0,0,0,14.7,6.927c.152.054.3.1.446.155-2.663-3.208-4.966-6.216-6.789-8.867-3.819-5.554-5.579-9.57-4.372-10.73s5.15.754,10.551,4.788c2.7,2.017,5.765,4.563,9.034,7.52L79.622,74.1l1.268,1.2,2.267,2.26c3.354,3.371,6.86,6.955,10.378,10.614C88.855,90.127,84.209,92.018,79.79,93.774Z"
                 transform="translate(-16.963 0.383) rotate(-7)" fill="currentColor"></path>
             </svg>
           </div>
-          
+
           <div class="col-xl-7 col-md-6  align-items-stretch">
-            <div class="col-xl-3 col-md-6  align-items-stretch mt-4 mt-xl-0" data-aos="zoom-in"
-              data-aos-delay="400">
+            <div class="col-xl-3 col-md-6  align-items-stretch mt-4 mt-xl-0" data-aos="zoom-in" data-aos-delay="400">
               <div class="icon-box">
 
               </div>
@@ -339,18 +333,29 @@
     </section>End Pricing Section -->
 
 
-     <!-- ======= Hasil Gambar ======= -->
+    <!-- ======= Hasil Gambar ======= -->
 
-    
-    <div class="section-title">
+
+    <!-- <div class="section-title">
       <h2>ABOUT</h2>
-    </div>
+    </div> -->
+
     <section id="about" class="d-flex align-items-center">
-    <div class="container">
-        <div class="row">
-          <div id="_bg__frame_1"  >
-            <button class="download">Deteksi Repost</button>
-              <button class="download">Dowload</button>
+
+
+      <div class="container">
+
+        <div class="d-flex align-items-center justify-content-center vh-60 flex-column gap-7">
+          <form method="post" action="/scraping" class="d-flex">
+            <input class="form-control me-10" type="search" placeholder="Cari Nama Produk " aria-label="Search">
+            <button class="btn btn-primary" name="images" type="submit">Search</button>
+          </form>
+        </div>
+
+        <div class="row " style="margin-top:100px !important ;">
+          <div  id="_bg__frame_1">
+            <div class="mb-5"> <button class="download" type="submit">Dowload</button><br>
+              <button class="download" type="submit">Deteksi Repost</button><br>
               <img src="{{url_for('static', filename='Dataset/Data1.png')}}" id="mask_group" />
               <img src="{{url_for('static', filename='Dataset/Data1.png')}}" id="mask_group" />
               <img src="{{url_for('static', filename='Dataset/Data1.png')}}" id="mask_group" />
@@ -365,8 +370,14 @@
               <img src="{{url_for('static', filename='Dataset/Data1.png')}}" id="mask_group" />
               <img src="{{url_for('static', filename='Dataset/Data1.png')}}" id="mask_group" />
               <img src="{{url_for('static', filename='Dataset/Data1.png')}}" id="mask_group" />
-              
-          <!--<div class="hasil_repost">
+            </div>
+
+            <div class="">
+
+            </div>
+
+
+            <!--<div class="hasil_repost">
               <h4>95%</h4>
               <h4>80%</h4>
               <h4>98%</h4>
@@ -378,11 +389,11 @@
           </div>
         </div>
 
-        
-              </div>
-            
 
-  </section><!-- Hasil Gambar -->
+      </div>
+
+
+    </section><!-- Hasil Gambar -->
 
 
 
@@ -391,10 +402,8 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h2>Contact</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint
-            consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit
-            in iste officiis commodi quidem hic quas.</p>
+          <h2>Narahubung</h2>
+          <p>Anda dapat menghubungi kami melalui alamat berikut.</p>
         </div>
 
         <div class="row">
